# rdf-fusion

./: .gitmodules  Cargo.toml  README.md  TASK.md  clippy.toml  deny.toml  justfile
bench/: .gitignore  Cargo.toml  justfile
bench/benches/: bsbm_business_intelligence.rs  bsbm_explore.rs  dump.rs  store_preparation.rs  wind_farm.rs
bench/benches/utils/: mod.rs  verbose.rs
bench/src/: config.rs  environment.rs  lib.rs  main.rs  operation.rs
bench/src/benchmarks/: mod.rs
bench/src/benchmarks/bsbm/: benchmark.rs  report.rs  requirements.rs
bench/src/benchmarks/windfarm/: benchmark.rs  mod.rs  report.rs
bench/src/prepare/: copy_file.rs  file_download.rs  requirement.rs
bench/src/utils/: cache.rs  mod.rs
bench/tests/: dump.rs  load.rs  mod.rs
bench/tests/parquet/: file_size.rs  mod.rs  scanned_bytes.rs
bench/tests/plans/: bsbm_business_intelligence.rs  bsbm_explore.rs  mod.rs  wind_farm.rs
bench/tests/plans/snapshots/: r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, ObjectId).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, PlainTerm).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, String).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, object-id).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, plain-term).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized, ObjectId).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized, PlainTerm).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized, String).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized, plain-term).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, ObjectId).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, PlainTerm).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, String).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, object-id).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, plain-term).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, ObjectId).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, PlainTerm).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, String).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, object-id).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, ObjectId).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, PlainTerm).snap  r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, String).snap  (+251 more)
bench/tests/query_results/: bsbm.rs  mod.rs  windfarm.rs
bench/tests/test_queries/windfarm/: wind-farm-grouped-production-query1.sparql  (+7 more)
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  main.rs
cli/src/commands/: build_database.rs  dump.rs  load.rs  mod.rs  query.rs  serve.rs
cli/tests/: build_database.rs  dump.rs  load.rs  query.rs  readme.rs
cli/tests/snapshots/: dump__cli_dump_spiderman.snap  dump__cli_dump_spiderman_sorted.snap  dump__cli_dump_spiderman_sorted_native_osp.snap  dump__cli_dump_spiderman_sorted_osp.snap  dump__cli_dump_spiderman_sorted_zorder.snap
examples/: Cargo.toml
examples/data/: spiderman.parquet
examples/examples/: custom_function.rs  custom_storage.rs  plan_builder.rs  query_store.rs  use_store.rs
lib/common/: Cargo.toml  README.md
lib/common/src/: config.rs  input.rs  lib.rs  quad_component.rs  quads.rs  sort_order.rs  typed_value.rs  vocab.rs
lib/compute/: Cargo.toml  README.md
lib/compute/benches/: numeric_binary.rs  numeric_unary.rs
lib/compute/src/: lib.rs
lib/encoding/: Cargo.toml
lib/encoding/benches/: with_plain_term_encoding.rs  with_string_encoding.rs
lib/encoding/src/: encoding.rs  encoding_name.rs  encodings.rs  lib.rs  quad_storage_encoding.rs  scalar_encoder.rs
lib/execution/: Cargo.toml
lib/execution/src/: builder.rs  engine.rs  lib.rs  load.rs  planner.rs
lib/extensions/: Cargo.toml
lib/functions/: Cargo.toml
lib/functions/benches/: scalar.rs  scalar_binary.rs
lib/functions/src/: lib.rs  registry.rs
lib/logical/: Cargo.toml
lib/logical/src/: active_graph.rs  expr_builder.rs  expr_builder_context.rs  lib.rs  logical_plan_builder.rs  logical_plan_builder_context.rs
lib/physical/: Cargo.toml
lib/physical/src/: lib.rs
lib/rdf-fusion/: Cargo.toml
lib/rdf-fusion/benches/: store.rs
lib/rdf-fusion/src/: error.rs  lib.rs  store.rs
lib/rdf-fusion/tests/: bgp_planner.rs  store.rs
lib/storage/: Cargo.toml
lib/storage/benches/: delta_object_id_mapping.rs
lib/storage/src/: index.rs  lib.rs  utils.rs
lib/storage/tests/: persistence.rs  storage.rs
lib/web/: Cargo.toml
lib/web/benches/: encode_results.rs
lib/web/src/: lib.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs  test.rs  testsuite.rs  vocab.rs
testsuite/src/storage/: mod.rs  tests.rs
testsuite/src/w3c/: evaluation.rs  files.rs  manifest.rs  mod.rs  report.rs  syntax.rs  update.rs  utils.rs
testsuite/tests/: rdf_fusion.rs  sparql.rs  storage.rs  update.rs
(+353 files in other folders)
