[package]
name = "rdf-fusion-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/tobixdev/rdf-fusion/tree/main/bench"
description = """
RDF Fusion benchmarking tool
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rdf-fusion-bench"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bzip2.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
datafusion.workspace = true
deltalake.workspace = true
futures.workspace = true
object_store.workspace = true
oxrdfio.workspace = true
prettytable-rs.workspace = true
rand.workspace = true
rand_distr.workspace = true
rdf-fusion.workspace = true
reqwest.workspace = true
serde_json.workspace = true
snmalloc-rs.workspace = true
tokio.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "bsbm_explore"
harness = false

[[bench]]
name = "bsbm_business_intelligence"
harness = false

[[bench]]
name = "wind_farm"
harness = false

[[bench]]
name = "store_preparation"
harness = false

[[bench]]
name = "dump"
harness = false
