[package]
name = "rdf-fusion-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["command-line-utilities", "database"]
repository.workspace = true
description = """
RDF Fusion CLI tool and SPARQL HTTP server
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rdf-fusion"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
datafusion.workspace = true
deltalake = { workspace = true, features = ["s3"] }
object_store = { workspace = true, features = ["aws"] }
rdf-fusion.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-web.workspace = true
snmalloc-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true

[lints]
workspace = true
