[package]
name = "rdf-fusion-testsuite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
description = """
Implementation of testsuites for RdfFusion
"""
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
datafusion.workspace = true
futures.workspace = true
rdf-fusion.workspace = true
oxttl.workspace = true
sparesults.workspace = true
text-diff.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true

[lints]
workspace = true
