[package]
name = "rdf-fusion-testsuite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
description = """
Implementation of testsuites for RdfFusion
"""
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
rdf-fusion.workspace = true
object_store.workspace = true
oxttl.workspace = true
sparesults.workspace = true
text-diff.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
url.workspace = true

[lints]
workspace = true
