[package]
name = "rdf-fusion-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Common
"""

[dependencies]
# Dependencies to oxigraph's data model. We re-export them in this crate if we rely on it. To avoid any other crates
# accidentally depending directly on oxiraph's data model, we do not include it in the workspace.
oxsdatatypes.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
oxrdfio.workspace = true
spargebra.workspace = true

# Regular Dependencies
datafusion.workspace = true
thiserror.workspace = true

[lints]
workspace = true
