[package]
name = "rdf-fusion-compute"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Compute
"""

[dependencies]
rdf-fusion-encoding.workspace = true
rdf-fusion-common.workspace = true
datafusion.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true

[lints]
workspace = true

[[bench]]
name = "numeric_unary"
harness = false

[[bench]]
name = "numeric_binary"
harness = false