[package]
name = "rdf-fusion-encoding"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Term Encodings
"""

[dependencies]
rdf-fusion-model.workspace = true
datafusion.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true

[lints]
workspace = true

[[bench]]
name = "with_plain_term_encoding"
harness = false

[[bench]]
name = "with_string_encoding"
harness = false
