[package]
name = "rdf-fusion-execution"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Execution Engine
"""

[dependencies]
async-trait.workspace = true
bytes.workspace = true
datafusion.workspace = true
itertools.workspace = true
moka.workspace = true
object_store.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-model.workspace = true
futures.workspace = true
rdf-fusion-logical.workspace = true
rdf-fusion-physical.workspace = true
oxrdfio.workspace = true
reqwest.workspace = true
sparesults.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
