[package]
name = "rdf-fusion-execution"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Execution Engine
"""

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
deltalake.workspace = true
itertools.workspace = true
object_store.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-storage.workspace = true
futures.workspace = true
rdf-fusion-logical.workspace = true
rdf-fusion-physical.workspace = true
oxrdfio.workspace = true
reqwest.workspace = true
sparesults.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true

[lints]
workspace = true
