[package]
name = "rdf-fusion-extensions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
description = """
RDF Fusion Extensions API
"""

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-common.workspace = true
thiserror.workspace = true

[lints]
workspace = true
