[package]
name = "rdf-fusion-functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Functions
"""

[dependencies]
base16ct.workspace = true
datafusion.workspace = true
arrow-string.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-model.workspace = true
itertools.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
insta.workspace = true
tokio.workspace = true

[lints]
workspace = true

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "scalar_binary"
harness = false
