[package]
name = "rdf-fusion-logical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Logical Operators and Rewriting Rules
"""

[dependencies]
datafusion.workspace = true
itertools.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-common.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
