[package]
name = "rdf-fusion-physical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Physical Operators and Rewriting Rules
"""

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-logical.workspace = true
itertools.workspace = true

[dev-dependencies]
insta.workspace = true
tokio.workspace = true

[lints]
workspace = true
