[package]
name = "rdf-fusion"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["database-implementations"]
repository = "https://github.com/tobixdev/rdf-fusion"
documentation = "https://docs.rs/rdf-fusion"
description = """
a SPARQL database and RDF toolkit
"""
edition.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
deltalake.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-model.workspace = true
futures.workspace = true
object_store.workspace = true
rdf-fusion-execution.workspace = true
rdf-fusion-logical.workspace = true
rdf-fusion-storage.workspace = true
oxrdfio.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rand.workspace = true
tokio-test.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "store"
harness = false
