[package]
name = "rdf-fusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Storage Layers
"""

[dependencies]
async-trait.workspace = true
hashbrown.workspace = true
futures.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-model.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-logical.workspace = true
deltalake.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
rand.workspace = true
rdf-fusion-execution.workspace = true

[lints]
workspace = true

[[bench]]
name = "delta_object_id_mapping"
harness = false