[package]
name = "rdf-fusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Storage Layers
"""

[dependencies]
ahash.workspace = true
async-trait.workspace = true
bytes.workspace = true
hashbrown.workspace = true
futures.workspace = true
object_store.workspace = true
oxrdfio.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-common.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-logical.workspace = true
moka.workspace = true
serde_json.workspace = true
deltalake.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
rand.workspace = true
rdf-fusion-execution.workspace = true

[lints]
workspace = true

[[bench]]
name = "delta_object_id_mapping"
harness = false