[package]
name = "rdf-fusion-web"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Web
"""

[dependencies]
axum.workspace = true
axum-extra.workspace = true
datafusion.workspace = true
futures.workspace = true
headers.workspace = true
headers-accept.workspace = true
mediatype.workspace = true
serde.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tracing.workspace = true
rdf-fusion.workspace = true
serde_urlencoded.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
axum-test.workspace = true

[lints]
workspace = true

[[bench]]
name = "encode_results"
harness = false
